[package]
name = "dlctix"
version = "0.0.2"
edition = "2021"
authors = ["conduition <conduition@proton.me>"]
description = "Ticketed Discreet Log Contracts"
readme = "README.md"
license = "Unlicense"
repository = "https://github.com/conduition/ticketed-dlc"
keywords = ["dlc", "smart", "contract", "ticket", "auction"]

[dependencies]
bitcoin = { version = "0.31.1" }
hex = "0.4.3"
musig2 = { version = "0.0.8", features = ["rand"] }
rand = "0.8.5"
secp = { version = "0.2.1" }
secp256k1 = { version = "0.28.2", features = ["global-context"] }
sha2 = "0.10.8"

[dev-dependencies]
bitcoincore-rpc = "0.18.0"
dotenv = "0.15.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
