[package]
name = "dlctix"
version = "0.0.4"
edition = "2021"
authors = ["conduition <conduition@proton.me>"]
description = "Ticketed Discreet Log Contracts"
readme = "README.md"
license = "Unlicense"
repository = "https://github.com/conduition/ticketed-dlc"
keywords = ["dlc", "smart", "contract", "ticket", "auction"]
exclude = ["/img"]

[dependencies]
bitcoin = { version = "0.31.1", default-features = false, features = ["std", "serde"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
musig2 = { version = "0.0.8", default-features = false, features = ["secp256k1", "rand", "serde"] }
rand = { version = "0.8.5", default-features = false }
secp = { version = "0.2.3", default-features = false, features = ["serde"] }
secp256k1 = { version = "0.28.2", default-features = false, features = ["global-context"] }
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
serdect = { version = "0.2.0", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10.8", default-features = false }

[dev-dependencies]
bitcoincore-rpc = "0.18.0"
dotenv = "0.15.0"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
serde_cbor = { version = "0.11.2", default-features = false, features = ["std"] }
serde_json = { version = "1.0.114", default-features = false, features = [] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
