[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.31.1"
dlctix = { version = "0.0.4", path = "../.." }
secp = { version = "0.2.3", features = ["serde"] }
serde = "1.0.197"
