[package]
name = "mm_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dlctix = { version = "0.0.4", path = "../.." }
serde_cbor = "0.11.2"
common = { path = "../common" }
bitcoin = "0.31.1"
rand = "0.8.5"
hex = "0.4.3"
serdect = "0.2.0"
serde = "1.0.197"
serde_json = "1.0.114"
bitcoincore-rpc = "0.18.0"
